changement text h1 acc

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="content_acc"id="accueil">
         <div id="accueil"  class="acceuil-section">
             <h1>MBEMBA Nhora</h1>
-            <p class="text_accueil"> Développeuse d'application multimédia</p>
+            <p class="text_accueil"> Développeuse d'application multimédia Junior</p>
             <a href="#a-propos" class="roll-button button-slider">Qui-suis je ?</a>
         </div>
     </div>
