--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
 
             <button type="submit">Envoyer</button>
         </form>
+        <div class="foot_form"><p> <iconify-icon icon="circum:mail"></iconify-icon> 
+            Mail: nhmbemba@gmail.com</p></div>
+        
     </div>
 </div>
 
