--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 
 <script src="./js/nav.js"></script>
 <script src="./js/formulaire.js"></script>
+<script src="./js/progressBar.js"></script>
 <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
