--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="accueil"  class="acceuil-section">
             <h1>MBEMBA Nhora</h1>
             <p class="text_accueil"> Développeuse d'application multimédia Junior</p>
-            <a href="#a-propos" class="roll-button button-slider">Qui-suis je ?</a>
+            <a href="#a-propos" class="roll-button">Qui-suis je ?</a>
         </div>
     </div>
 
@@ -72,7 +72,7 @@
         <div  class="competences-section">
 
             <div class="photos-p">
-                <img src="./img/cv_photo.PNG" alt="Mbemba Nhora" style="height: 300px;">
+                <img class="projet_image_cv" src="./img/cv_photo.PNG" alt="Mbemba Nhora" style="height: 300px;">
             </div>
 
             <div id="bar_front">
@@ -107,16 +107,16 @@
 	</div> 
 
     <!-- Projets -->
-<div class="content_projet" id="projet">
-    <div class="projet_section">
-    <h2>Mes projets</h2>
-        <div>
-            <img class="projet_img" src="./img/mon portfolio_img.PNG" alt="image_portfolio_Mbemba_Nhora">
+    <div class="content_projet" id="projet">
+        <div class="projet_section">
+        <h2>Mes projets</h2>
+            <div>
+                <img class="projet_img" src="./img/mon portfolio_img.PNG" alt="image_portfolio_Mbemba_Nhora">
+            </div>
+            <a href="#"> Le site sur lequel vous êtes.</a>
+
         </div>
-        <a href=""> Le site sur lequel vous êtes.</a>
-        
     </div>
-</div>
 
     <!-- Formulaire -->
     <div class="bg">
